weekly_summary_log.txt
======================================== 
Running Weekly Summary Email Dispatch at 2026-04-03  9:00:00.79 
2026-04-03 09:00:01,002 - WEEKLY_SUMMARY - INFO - 주간 요약 메일 생성을 시작합니다.
2026-04-03 09:00:04,193 - WEEKLY_SUMMARY - INFO - [REDACTED_EMAIL]로 주간 요약 메일 전송 완료!
이메일 발송 성공!
Finished at 2026-04-03  9:00:04.21 
======================================== 
Running Weekly Summary Email Dispatch at 2026-04-10  9:00:00.59 
2026-04-10 09:00:00,767 - WEEKLY_SUMMARY - INFO - 주간 요약 메일 생성을 시작합니다.
2026-04-10 09:00:03,734 - WEEKLY_SUMMARY - INFO - [REDACTED_EMAIL]로 주간 요약 메일 전송 완료!
이메일 발송 성공!
Finished at 2026-04-10  9:00:03.76 
======================================== 
Running Weekly Summary Email Dispatch at 2026-04-17  9:00:00.91 
  File "C:\Users\ggamy\OneDrive\Desktop\zBidInfo\execution\send_weekly_summary.py", line 87
    return
    ^^^^^^
SyntaxError: 'return' outside function
Finished at 2026-04-17  9:00:00.99 
======================================== 
Running Weekly Summary Email Dispatch at 2026-04-24  9:00:00.96 
  File "C:\Users\ggamy\OneDrive\Desktop\zBidInfo\execution\send_weekly_summary.py", line 87
    return
    ^^^^^^
SyntaxError: 'return' outside function
Finished at 2026-04-24  9:00:01.04 
======================================== 
Running Weekly Summary Email Dispatch at 2026-05-01  9:00:00.93 
  File "C:\Users\ggamy\OneDrive\Desktop\zBidInfo\execution\send_weekly_summary.py", line 87
    return
    ^^^^^^
SyntaxError: 'return' outside function
Finished at 2026-05-01  9:00:01.00 
======================================== 
Running Weekly Summary Email Dispatch at 2026-05-08  9:00:00.96 
  File "C:\Users\ggamy\OneDrive\Desktop\zBidInfo\execution\send_weekly_summary.py", line 87
    return
    ^^^^^^
SyntaxError: 'return' outside function
Finished at 2026-05-08  9:00:01.04 
======================================== 
Running Weekly Summary Email Dispatch at 2026-05-15  9:00:00.92 
  File "C:\Users\ggamy\OneDrive\Desktop\zBidInfo\execution\send_weekly_summary.py", line 87
    return
    ^^^^^^
SyntaxError: 'return' outside function
Finished at 2026-05-15  9:00:00.99 
